--- a/examples/GeoTIFFTileLayer.ipynb
+++ b/examples/GeoTIFFTileLayer.ipynb
@@ -10,35 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b83d101d-69cf-4df1-8ad3-5103b33d089e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c71d26b16a604c2c90d215887c67fa36",
+       "model_id": "969d3d50caeb4ae0ac88e372761986b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[5.314329221346643, 16.3625002926901], zoom=9.0)"
+       "Map(center=[5.314329221346643, 16.3625002926901], layers=[RasterTileLayer()], zoom=9.0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import Map,GeoTIFFTileLayer\n",
+    "from ipyopenlayers import Map,GeoTIFFTileLayer,RasterTileLayer\n",
     "m = Map(center=[5.314329221346643, 16.3625002926901], zoom=9)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2719495a-edd2-4547-ac37-74e791513064",
    "metadata": {},
    "outputs": [],
@@ -64,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
