--- a/examples/GeojsonLayer.ipynb
+++ b/examples/GeojsonLayer.ipynb
@@ -10,38 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b18cdb9c-e8d6-450e-b86d-0767936ee2cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c692d080aaff495e891b9e23bdcbf4a4",
+       "model_id": "077fd5d6ff0f440e95409362bc4a20a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[-77.15641232105159, 34.561348453091625], zoom=9.5)"
+       "Map(center=[-77.15641232105159, 34.561348453091625], layers=[RasterTileLayer()], zoom=9.5)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, GeoJSON\n",
+    "from ipyopenlayers import Map, GeoJSON ,RasterTileLayer\n",
     "import os\n",
     "import json\n",
     "\n",
     "m = Map(center=[-77.15641232105159, 34.561348453091625], zoom=9.5)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "0b1d63b8-7beb-49dd-a7ce-71b2d9e214e0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "79e18467-e6ff-4893-97c0-d737e6d91dc0",
    "metadata": {},
    "outputs": [],
@@ -73,34 +75,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b9216f31-e836-4174-a1fe-78692828a41b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd504a166c1f4ae8ac225b75ca8f4a95",
+       "model_id": "847a6922ad56416583f25562b0b122ce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[10.547885834010392, 33.75980371159855], zoom=5.7)"
+       "Map(center=[10.547885834010392, 33.75980371159855], layers=[RasterTileLayer()], zoom=5.7)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "map_geo=Map(center=[10.547885834010392, 33.75980371159855],zoom=5.7)\n",
+    "layer= RasterTileLayer()\n",
+    "map_geo.add_layer(layer)\n",
     "map_geo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9152c7db-5a5c-4922-ba55-d0224f5986a3",
    "metadata": {
     "jupyter": {
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "99fe9e8b-872c-4a5a-8f95-613e968d0a2d",
    "metadata": {},
    "outputs": [],
@@ -379,26 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "9c7bb99b-68dc-404f-aced-81ad043c2df2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "918c83dd978e48f19afba1873061ce71",
+       "model_id": "343fc28dcc5441308ee28cf58a02dd6e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[87.36398752846992, 67.51898568355884], zoom=2.15)"
+       "Map(center=[87.36398752846992, 67.51898568355884], layers=[RasterTileLayer(), GeoJSON(data={'type': 'FeatureCo…"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,6 +417,8 @@
     "\n",
     "# Create a map with coordinates centered on Europe\n",
     "map = Map(center=[87.36398752846992, 67.51898568355884], zoom=2.15)  # Note the coordinate order: [latitude, longitude]\n",
+    "layer= RasterTileLayer()\n",
+    "map.add_layer(layer)\n",
     "\n",
     "# Add the GeoJSON layer with the defined style\n",
     "geo_json = GeoJSON(\n",
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e5dbbe3a-6a03-472c-a361-f3485c517f32",
    "metadata": {},
    "outputs": [],
@@ -446,45 +448,6 @@
     "    'pointStrokeWidth': 2           \n",
     "};"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3edaf4a7-554c-4685-a3a8-f6db02853f22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11a59954bbd48c2acf9382fa4d530b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[0, 0], zoom=2.0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from ipyopenlayers import Map\n",
-    "\n",
-    "# Create a map centered on a specific location\n",
-    "m = Map(center=[0, 0], zoom=2)\n",
-    "# Display the map\n",
-    "m\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "265ce355-efc2-453e-b8de-44b587b260ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -503,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
