--- a/examples/MousePositionControl.ipynb
+++ b/examples/MousePositionControl.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9496c101e4a48ad948c9cadcf8ee81f",
+       "model_id": "b4013dda69c545998dd43efdc8a7282b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0, 0], zoom=2.0)"
+       "Map(center=[0, 0], controls=[MousePosition()], layers=[RasterTileLayer()])"
       ]
      },
      "execution_count": 2,
@@ -31,12 +31,13 @@
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, MousePosition\n",
+    "from ipyopenlayers import Map, MousePosition, RasterTileLayer\n",
     "\n",
     "\n",
     "# Create a map with initial zoom level and center coordinates\n",
     "m = Map(center=[0, 0], zoom=2)\n",
-    "\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "\n",
     "# Add a MousePositionControl to the map\n",
     "mouseposition_control = MousePosition()\n",
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
