--- a/examples/VectorTileLayer.ipynb
+++ b/examples/VectorTileLayer.ipynb
@@ -40,12 +40,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "603ff017ae854f53a202f40f73321e8b",
+       "model_id": "0ffb306ce33b41c99044b9f70b25ebb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[4.299875503991089, 46.85012303279379], zoom=0.0)"
+       "Map(center=[4.299875503991089, 46.85012303279379], layers=[RasterTileLayer()], zoom=0.0)"
       ]
      },
      "execution_count": 3,
@@ -55,12 +55,14 @@
    ],
    "source": [
     "m = Map(center=[4.299875503991089, 46.85012303279379], zoom=0)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4602b570-bcb3-42f3-a34f-4f71048eabdb",
    "metadata": {},
    "outputs": [],
@@ -292,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
