--- a/examples/VideoOverlay.ipynb
+++ b/examples/VideoOverlay.ipynb
@@ -10,35 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "a6d5c461-1402-40e1-bee4-1cfd951d0f24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8af4a87d5414fdcbc310e3636b650f5",
+       "model_id": "0351fe26341e4593b15cb9d372a4c3f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], zoom=2.0)"
+       "Map(center=[0.0, 0.0], layers=[RasterTileLayer()])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, VideoOverlay\n",
-    "m = Map(center=[0.0, 0.0], zoom=2)\n",
+    "from ipyopenlayers import Map, VideoOverlay,RasterTileLayer\n",
+    "m = Map(center=[0.0, 0.0])\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "977b61ea-f1b4-4570-b9df-c06d3fdc7b33",
    "metadata": {},
    "outputs": [],
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "06f173e9-4e67-4996-97fc-43a24702d2d6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "9ba0823f-7f95-419e-a2f9-a12c116d16c2",
    "metadata": {},
    "outputs": [],
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "72b802cd-8066-48ca-aa4b-a467ae494eed",
    "metadata": {},
    "outputs": [],
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "bf357393-aec1-43f0-a89b-9c6d7c02a02d",
    "metadata": {},
    "outputs": [],
@@ -90,21 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "89a253a3-ab51-4e75-b3fa-e813cbaf2c34",
    "metadata": {},
    "outputs": [],
    "source": [
     "m.remove_overlay(video)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b8d7a94-a1d2-4f2c-bb42-b773dbeb52d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -123,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
