--- a/docs/content/FullScreenControl.ipynb
+++ b/docs/content/FullScreenControl.ipynb
@@ -2,55 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "641026fc-e087-4e8e-a8d3-338273644189",
+   "id": "2997d7c5-f437-4d2e-ae97-92e718897e24",
    "metadata": {},
    "source": [
-    "# Map"
+    "# Full Screen Control"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "94284d6e",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 2,
+   "id": "4ad66d70-5fc4-490e-a8a1-fd754cc575b5",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf72e462ac2847b586c82d5738e01598",
+       "model_id": "d0f498ca774541ee826f8c8e8056afc2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], layers=[RasterTileLayer()])"
+       "Map(center=[0, 0], zoom=2.0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import (\n",
-    "    Map, RasterTileLayer\n",
-    ")\n",
-    "m = Map(center=[0.0, 0.0], zoom=2)\n",
-    "layer= RasterTileLayer()\n",
-    "m.add_layer(layer)\n",
+    "from ipyopenlayers import Map, FullScreen\n",
+    "\n",
+    "\n",
+    "# Create a map with initial zoom level and center coordinates\n",
+    "m = Map(center=[0, 0], zoom=2)\n",
+    "\n",
+    "\n",
+    "# Add a FullscreenControl to the map\n",
+    "fullscreen_control = FullScreen()\n",
+    "m.add_control(fullscreen_control)\n",
+    "\n",
+    "# Display the map\n",
     "m"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ecd0ff6-93f3-4cd8-bc0a-8520aab07a84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -69,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
