--- a/examples/FullScreenControl.ipynb
+++ b/examples/FullScreenControl.ipynb
@@ -10,41 +10,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4ad66d70-5fc4-490e-a8a1-fd754cc575b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0f498ca774541ee826f8c8e8056afc2",
+       "model_id": "e8a321a5d10f4c39a7dd3db688eea45a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0, 0], zoom=2.0)"
+       "Map(center=[0, 0], controls=[FullScreen()], layers=[RasterTileLayer()], zoom=0.0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, FullScreen\n",
-    "\n",
+    "from ipyopenlayers import Map, FullScreen, RasterTileLayer\n",
     "\n",
     "# Create a map with initial zoom level and center coordinates\n",
-    "m = Map(center=[0, 0], zoom=2)\n",
-    "\n",
-    "\n",
-    "# Add a FullscreenControl to the map\n",
+    "m = Map(center=[0, 0], zoom=0)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "fullscreen_control = FullScreen()\n",
     "m.add_control(fullscreen_control)\n",
-    "\n",
-    "# Display the map\n",
     "m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f32ea9-06ce-4439-a2b1-b098a5289d45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -63,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
