--- a/examples/HeatmapLayer.ipynb
+++ b/examples/HeatmapLayer.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e021ae5d954947eca4376e90bbe33fbd",
+       "model_id": "a3d58586ab76416db69a938f7d716810",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[9.993566065893873, 47.226106632719905], zoom=5.0)"
+       "Map(center=[9.993566065893873, 47.226106632719905], layers=[RasterTileLayer()], zoom=5.0)"
       ]
      },
      "execution_count": 1,
@@ -31,8 +31,10 @@
     }
    ],
    "source": [
-    "from ipyopenlayers import Map,HeatmapLayer\n",
+    "from ipyopenlayers import Map,HeatmapLayer,RasterTileLayer\n",
     "m = Map(center=[9.993566065893873, 47.226106632719905], zoom=5)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
@@ -69,6 +71,14 @@
     "heatmap_layer = HeatmapLayer(blur=20, radius=15, points=points_data_france)\n",
     "m.add_layer(heatmap_layer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02028e81-1e9a-4aee-b41e-d5dc2ae1a558",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -87,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
