--- a/examples/ImageOverlay.ipynb
+++ b/examples/ImageOverlay.ipynb
@@ -10,35 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c5c68c37-2412-45c5-a771-dc261557938c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37be067fbd514ef98897e0049e5451c2",
+       "model_id": "7006314cdd694d6e956d2866fec21bde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[8.988, -0.686], zoom=3.0)"
+       "Map(center=[8.988, -0.686], layers=[RasterTileLayer()], zoom=3.0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, ImageOverlay\n",
+    "from ipyopenlayers import Map, ImageOverlay, RasterTileLayer\n",
     "m = Map(center=[8.988, -0.686], zoom=3)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d368179d-7568-4887-9f25-026cb09e2d04",
    "metadata": {},
    "outputs": [],
@@ -84,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
