--- a/examples/ScaleLineControl.ipynb
+++ b/examples/ScaleLineControl.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43233fb9481741f08406b6052a305bb5",
+       "model_id": "fa3959aa2c4543eca9a9196b7259f7cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0, 0], zoom=2.0)"
+       "Map(center=[0, 0], controls=[ScaleLine()], layers=[RasterTileLayer()])"
       ]
      },
      "execution_count": 2,
@@ -31,12 +31,13 @@
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, ScaleLine\n",
+    "from ipyopenlayers import Map, ScaleLine, RasterTileLayer\n",
     "\n",
     "\n",
     "# Create a map with initial zoom level and center coordinates\n",
     "m = Map(center=[0, 0], zoom=2)\n",
-    "\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "\n",
     "# Add a ScalelineControl to the map\n",
     "scaleline_control = ScaleLine()\n",
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
