--- a/examples/ZoomSliderControl.ipynb
+++ b/examples/ZoomSliderControl.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52d2f260d8c84c30ab41101e17434263",
+       "model_id": "306c72eae40a4f008154d0b750de6bd6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0, 0], zoom=2.0)"
+       "Map(center=[0, 0], controls=[ZoomSlider()], layers=[RasterTileLayer()])"
       ]
      },
      "execution_count": 2,
@@ -31,12 +31,13 @@
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, ZoomSlider\n",
+    "from ipyopenlayers import Map, ZoomSlider, RasterTileLayer\n",
     "\n",
     "# Create a map with initial zoom level and center coordinates\n",
     "m = Map(center=[0, 0], zoom=2)\n",
     "\n",
-    "\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "# Add a ZoomSlider control to the map\n",
     "zoom_slider = ZoomSlider()\n",
     "m.add_control(zoom_slider)\n",
@@ -63,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
