--- a/examples/map.ipynb
+++ b/examples/map.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "94284d6e",
    "metadata": {
     "vscode": {
@@ -21,15 +21,15 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf72e462ac2847b586c82d5738e01598",
+       "model_id": "2fe473c94493460082701df614ff2268",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], layers=[RasterTileLayer()])"
+       "Map(center=[0.0, 0.0], zoom=2.0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,6 +38,10 @@
     "from ipyopenlayers import (\n",
     "    Map, RasterTileLayer\n",
     ")\n",
+    "import configparser\n",
+    "import requests\n",
+    "import unicodedata\n",
+    "\n",
     "m = Map(center=[0.0, 0.0], zoom=2)\n",
     "layer= RasterTileLayer()\n",
     "m.add_layer(layer)\n",
@@ -46,8 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6ecd0ff6-93f3-4cd8-bc0a-8520aab07a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('../.env.ini')\n",
+    "api_key = config['DEFAULT']['api_key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c2a997b5-3f80-4e9c-8956-5dba704f7eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_country_from_coordinates_geoapify(**kwargs):\n",
+    "    lon = kwargs.get('lon')\n",
+    "    lat = kwargs.get('lat')\n",
+    "    url = f\"https://api.geoapify.com/v1/geocode/reverse?lat={lat}&lon={lon}&apiKey={api_key}\"\n",
+    "    \n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    \n",
+    "    features = data.get('features', [])\n",
+    "    if features:\n",
+    "        first_feature = features[0]\n",
+    "        properties = first_feature.get('properties', {})\n",
+    "        country = properties.get('country', None)\n",
+    "        normalized_name = country.split(' ')[0]\n",
+    "        normalized_name = unicodedata.normalize('NFKD', normalized_name)\n",
+    "        normalized_name = normalized_name.encode('ASCII', 'ignore').decode('utf-8')\n",
+    "        print(f\"Country: {normalized_name}\")\n",
+    "\n",
+    "m.on_click(get_country_from_coordinates_geoapify)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73641754-d12e-41b6-8257-f43376ae18ec",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -69,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
