Add documentation and tests (#34)
* add python tests

* added doc

* added notebooks

* jupyter lite in progresss

* added test notebooks

* change notebooks

* notebooks

* Heatmap notebooks

* change te title in docs

* added notebooks examples for github

* jupyter lite + python block for geotiff

* Delete jupyter lite files

* remove jupyter lite file

* deteled extra file

* fixed doc

* documentation improved

* Update Playwright Snapshots

* Iterate on the docs and the jupyterlite build

* Iterate

* Rework docs

* Iterate

* Iterate

* Pin Python

* Update Playwright Snapshots

* More gentle test

* Add action to build the docs

* Fix package name

* Fix default shell + deps

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: martinRenou <martin.renou@gmail.com>

--- a/examples/VectorTileLayer.ipynb
+++ b/examples/VectorTileLayer.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dd871119-69ba-42b4-8287-e6f2478042be",
+   "metadata": {},
+   "source": [
+    "# Vector Tile Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "3e872bf4-ebce-4bf9-a693-45bbe7296b50",
+   "execution_count": 1,
+   "id": "07e9fe79-7e05-4e9d-9d9c-e33b865588d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b86d142b-3904-4340-ab94-285b25998834",
+   "execution_count": 2,
+   "id": "a89dcba4-940a-487c-a3b5-6664399af7d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,46 +33,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7fa3311c-d409-4c46-9493-5d99cc92bd49",
+   "execution_count": 3,
+   "id": "29e07326-af0d-4a79-b9b9-20c71496714b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "0ffb306ce33b41c99044b9f70b25ebb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[4.299875503991089, 46.85012303279379], zoom=0.0)"
+       "Map(center=[4.299875503991089, 46.85012303279379], layers=[RasterTileLayer()], zoom=0.0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m = Map(center=[4.299875503991089, 46.85012303279379], zoom=0)\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "45bcff0e-d17e-45c1-8ae3-cde10b6936a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raster=RasterTileLayer()\n",
-    "m.add_layer(raster) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "925df5fd-5165-4e6f-a2bd-aa9c875c3b42",
+   "execution_count": 4,
+   "id": "4602b570-bcb3-42f3-a34f-4f71048eabdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "52a18ec7-981b-4182-846f-91c372aeac98",
+   "execution_count": 7,
+   "id": "d215e909-2c2d-4df2-9fe1-033e95e83f63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_layer(vector_layer)"
+    "m.remove_layer(vector_layer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "2a617173-7a1e-4e9a-a9db-3b3d6085b5ea",
+   "execution_count": 8,
+   "id": "c1d6234d-ded9-45cb-902e-2b5ed9648cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,46 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ba96582e-a837-49df-b98d-aa1f2fa9ada5",
+   "execution_count": 9,
+   "id": "a7524fc5-9fff-4ae9-b472-c7f2829b8e0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "style = {\n",
-    "    'strokeColor': '#1E90FF',  # Dodger Blue for stroke\n",
-    "    'strokeWidth': 2,          # Moderate width for visibility\n",
-    "    'pointRadius': 7,          # Medium radius for points\n",
-    "    'fillColor': '#FFB6C1',    # Light Pink for fill\n",
-    "    'pointFillColor': '#98FB98',  # Pale Green for point fill\n",
-    "    'pointStrokeColor': '#8A2BE2', # Blue Violet for point stroke\n",
-    "    'pointStrokeWidth': 1.5       # Slightly increased width for point stroke\n",
-    "}"
+    "m.remove_layer(layer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "cc12097b-8d4c-4cc1-a43e-126137249db8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layer.style=style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "afc43b3c-805f-4144-97a1-43c9987e9558",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.remove_layer(layer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "5b8fe6af-f413-4244-b94d-88bcf114bb0d",
+   "execution_count": 10,
+   "id": "e63ac8af-aac5-425b-b295-6871da865f19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1bd06741-2430-42f6-a97a-ce73d73eb9e1",
+   "execution_count": 11,
+   "id": "a52b72ea-e25e-4367-aed3-0d662290bdb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_Geo.style= {\n",
+    "    'strokeColor': '#FF4500',  # Orange Red for stroke\n",
+    "    'strokeWidth': 2,          # Moderate width for visibility\n",
+    "    'pointRadius': 8,          # Medium radius for points\n",
+    "    'fillColor': '#2E8B57',    # Sea Green for fill\n",
+    "    'pointFillColor': '#FFD700',  # Gold for point fill\n",
+    "    'pointStrokeColor': '#4B0082', # Indigo for point stroke\n",
+    "    'pointStrokeWidth': 1.5       # Slightly increased width for point stroke\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0dd0ff66-9a71-497e-8674-820d8003827c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "b6538136-72ca-4bf7-b534-43d99c1f06ba",
+   "execution_count": 13,
+   "id": "75d3ecb6-fc1f-4099-9aa6-932bb568d387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,41 +192,33 @@
     "layer_mvt.opacity = 0.8\n",
     "layer_mvt.min_zoom = 1\n",
     "layer_mvt.max_zoom = 20\n",
-    "m.add_layer(layer_mvt)"
+    "m.add_layer(layer_mvt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "b7b77d74-d657-4109-b892-5a0823faf59c",
+   "execution_count": 14,
+   "id": "e28a3acb-2007-4867-a340-1ad33fed8a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "style = {\n",
-    "    'strokeColor': '#FF4500',  # Orange Red for stroke\n",
-    "    'strokeWidth': 2,          # Moderate width for visibility\n",
-    "    'pointRadius': 8,          # Medium radius for points\n",
-    "    'fillColor': '#2E8B57',    # Sea Green for fill\n",
-    "    'pointFillColor': '#FFD700',  # Gold for point fill\n",
-    "    'pointStrokeColor': '#4B0082', # Indigo for point stroke\n",
-    "    'pointStrokeWidth': 1.5       # Slightly increased width for point stroke\n",
-    "}"
+    "    'strokeColor': '#6B8E23', \n",
+    "    'strokeWidth': 2,        \n",
+    "    'pointRadius': 8,         \n",
+    "    'fillColor': '#9ACD32',\n",
+    "    'pointFillColor': '#F4A460',\n",
+    "    'pointStrokeColor': '#2E8B57',\n",
+    "    'pointStrokeWidth': 1.5 \n",
+    "};\n",
+    "\n",
+    "layer_mvt.style=style\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "476f7a69-2efa-4c78-9ea5-f4483a820cbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layer_mvt.style=style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "ad320792-4cbd-412d-927d-212c9129fbce",
+   "execution_count": 15,
+   "id": "a691d303-011e-42fd-b292-6c1ba9c50bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "dc29f47d-6517-4ecf-97f6-3606f6c568bd",
+   "execution_count": 16,
+   "id": "2a98882d-6ebd-4e77-8b5a-a69018a265cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "93efaf21-c8a0-43cb-9e6b-efe7851ef9b1",
+   "execution_count": 17,
+   "id": "96c74f55-0023-4df8-8bf0-12f38fe63da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "84fcf518-e268-4836-a675-b628e731ba3b",
+   "execution_count": 18,
+   "id": "eba620f4-7304-4005-a9ce-5984aedfac18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,31 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "6bf30428-a7c8-4798-b4fc-1b9ebb50edcd",
+   "execution_count": 19,
+   "id": "2c3ea211-2b6a-4d3c-996f-1a93eebfda6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_mvt.opacity = 0.1"
+    "layer_mvt.opacity = 0.1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "4a9f7252-456c-4d0e-ba73-1a1af144bab0",
+   "execution_count": 20,
+   "id": "cfef8f88-9d6e-492c-a707-6816337d6141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_layer(layer_mvt)"
+    "m.remove_layer(layer_mvt)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e330880-0e63-409f-8d96-1bd77d8d41b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -321,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
