--- a/examples/VideoOverlay.ipynb
+++ b/examples/VideoOverlay.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fbd7d97e-ee97-462a-97dd-b6a643b6b30b",
    "metadata": {},
    "source": [
-    "# Raster Tile Layer"
+    "# Video Overlay"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a6d5c461-1402-40e1-bee4-1cfd951d0f24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ecef659198c452a9521d4dcb9a05b6a",
+       "model_id": "0351fe26341e4593b15cb9d372a4c3f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0])"
+       "Map(center=[0.0, 0.0], layers=[RasterTileLayer()])"
       ]
      },
      "execution_count": 1,
@@ -29,68 +31,73 @@
     }
    ],
    "source": [
-    "from ipyopenlayers import Map, RasterTileLayer\n",
-    "m=Map()\n",
+    "from ipyopenlayers import Map, VideoOverlay,RasterTileLayer\n",
+    "m = Map(center=[0.0, 0.0])\n",
+    "layer= RasterTileLayer()\n",
+    "m.add_layer(layer)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "977b61ea-f1b4-4570-b9df-c06d3fdc7b33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('.config.ini')\n",
-    "key = config['DEFAULT']['key']"
+    "video=VideoOverlay(video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\")\n",
+    "m.add_overlay(video)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "06f173e9-4e67-4996-97fc-43a24702d2d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layere=RasterTileLayer(url=\"https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png\")\n",
-    "m.add_layer(layere) "
+    "video_o=VideoOverlay(video_url=\"https://static-assets.mapbox.com/mapbox-gl-js/drone.webm\",position=[-80,42])\n",
+    "m.add_overlay(video_o)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9ba0823f-7f95-419e-a2f9-a12c116d16c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "attributions = '<a href=\"https://www.maptiler.com/copyright/\" target=\"_blank\">&copy; MapTiler</a> ' +'<a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">&copy; OpenStreetMap contributors</a>';\n",
-    "\n",
-    "raster = RasterTileLayer(attributions=attributions,url='https://api.maptiler.com/maps/dataviz-dark/{z}/{x}/{y}.png?key=' + key,\n",
-    "    tileSize= 512)\n",
-    "m.add_layer(raster) "
+    "m.remove_overlay(video_o)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "72b802cd-8066-48ca-aa4b-a467ae494eed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_layer(raster)"
+    "video.video_url=\"https://static-assets.mapbox.com/mapbox-gl-js/drone.webm\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "bf357393-aec1-43f0-a89b-9c6d7c02a02d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "attributions = [\n",
-    "    '&copy; <a href=\"https://www.maptiler.com/copyright/\" target=\"_blank\">MapTiler</a>',\n",
-    "    '&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap contributors</a>'\n",
-    "]\n",
-    "\n",
-    "rasterlay = RasterTileLayer(url=f'https://api.maptiler.com/maps/satellite/{{z}}/{{x}}/{{y}}.jpg?key={key}',attributions=attributions,tileSize=512,maxZoom=20)\n",
-    "m.add_layer(rasterlay)"
+    "video.position=[30,-20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "89a253a3-ab51-4e75-b3fa-e813cbaf2c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_overlay(video)"
    ]
   }
  ],
@@ -114,5 +121,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
